<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>sniffy-parent</artifactId>
        <groupId>io.sniffy</groupId>
        <version>3.1.13-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>sniffy-module-tls</artifactId>

    <name>Sniffy TLS Module</name>
    <url>http://sniffy.io/</url>
    <description>Sniffy TLS Module</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <sonatypeOssDistMgmtSnapshotsUrl>https://oss.sonatype.org/content/repositories/snapshots/</sonatypeOssDistMgmtSnapshotsUrl>
    </properties>

    <dependencies>
        <dependency>
            <groupId>io.sniffy</groupId>
            <artifactId>sniffy-core</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>io.sniffy</groupId>
            <artifactId>sniffy-core</artifactId>
            <version>${project.version}</version>
            <type>test-jar</type>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.bouncycastle</groupId>
            <artifactId>bctls-jdk15on</artifactId>
            <version>1.68</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.bouncycastle</groupId>
            <artifactId>bcpkix-jdk15on</artifactId>
            <version>1.68</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <profiles>

        <profile>
            <id>jdk9plus</id>
            <activation>
                <activeByDefault>false</activeByDefault>
                <jdk>[1.9,)</jdk>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <version>3.8.1</version>
                        <configuration>
                            <compilerArgs>
                                <arg>--add-exports=java.base/sun.security.jca=ALL-UNNAMED</arg>
                            </compilerArgs>
                            <source>1.9</source>
                            <target>1.9</target>
                            <testSource>1.9</testSource>
                            <testTarget>1.9</testTarget>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>

    </profiles>

</project>